# ifsc-oop

./: .gitignore  LICENSE  README.md
.github/workflows/: labs.yml
labs/: CMakeLists.txt
labs/lab01/: CMakeLists.txt  REQUIREMENTS.md
labs/lab01/ex01/: CMakeLists.txt
labs/lab01/ex01/src/: main.cpp  person.cpp  person.hpp
labs/lab01/ex02/: CMakeLists.txt
labs/lab01/ex02/src/: elevator.cpp  elevator.hpp
labs/lab01/ex03/: CMakeLists.txt
labs/lab01/ex03/src/: clock.hpp  main.cpp
labs/lab01/ex04/: CMakeLists.txt
labs/lab01/ex04/src/: circle.cpp  circle.hpp  main.cpp
labs/lab01/ex05/: CMakeLists.txt
labs/lab01/ex05/src/: main.cpp  television.cpp  television.hpp
labs/lab01/ex06/: CMakeLists.txt
labs/lab01/ex06/src/: airconditioner.cpp  airconditioner.hpp  main.cpp
labs/lab01/ex07/: CMakeLists.txt
labs/lab01/ex07/src/: car.cpp  main.cpp
labs/lab01/task1/: CMakeLists.txt
labs/lab01/task1/src/: main.cpp  person.cpp
labs/lab01/task2/: CMakeLists.txt
labs/lab01/task2/src/: main.cpp
labs/lab01/task3/: CMakeLists.txt
labs/lab01/task3/src/: clock.cpp
labs/lab01/task4/: CMakeLists.txt
labs/lab01/task4/src/: circle.hpp  main.cpp
labs/lab01/task5/: CMakeLists.txt
labs/lab01/task6/: CMakeLists.txt
labs/lab01/task6/src/: airconditioner.hpp
labs/lab01/task7/: CMakeLists.txt
labs/lab01/task7/src/: car.hpp
